--- a/Intersect.Client/Intersect.Client.csproj
+++ b/Intersect.Client/Intersect.Client.csproj
@@ -67,7 +67,7 @@
   </ItemGroup>
 
   <ItemGroup Label="Package Embedded Resources">
-    <EmbeddedResource Include="$(PkgMonoGame_Framework_DesktopGL)\lib\net452\MonoGame.Framework.dll">
+    <EmbeddedResource Include="$(PkgMonoGame_Framework_DesktopGL)\lib\net6.0\MonoGame.Framework.dll">
       <Link>Resources\MonoGame.Framework.dll</Link>
     </EmbeddedResource>
     <EmbeddedResource Include="$(PkgMonoGame_Framework_DesktopGL)\runtimes\win-x86\native\SDL2.dll">
@@ -88,8 +88,8 @@
     <EmbeddedResource Include="$(PkgMonoGame_Framework_DesktopGL)\runtimes\linux-x64\native\libSDL2-2.0.so.0" WithCulture="false">
       <Link>Resources\libSDL2-2.0.so.0</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="$(PkgMonoGame_Framework_DesktopGL)\runtimes\osx\native\libSDL2-2.0.0.dylib">
-      <Link>Resources\libSDL2-2.0.0.dylib</Link>
+    <EmbeddedResource Include="$(PkgMonoGame_Framework_DesktopGL)\runtimes\osx\native\libSDL2.dylib">
+      <Link>Resources\libSDL2.dylib</Link>
     </EmbeddedResource>
     <EmbeddedResource Include="$(PkgMonoGame_Framework_DesktopGL)\runtimes\osx\native\libopenal.1.dylib">
       <Link>Resources\libopenal.1.dylib</Link>
@@ -105,8 +105,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.9" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" GeneratePathProperty="True" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" GeneratePathProperty="True" />
   </ItemGroup>
 
 </Project>
