--- a/Intersect.Client.Framework/Intersect.Client.Framework.csproj
+++ b/Intersect.Client.Framework/Intersect.Client.Framework.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Configurations>Debug;Release;Testing</Configurations>
+    <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
