--- a/Intersect.Network/Intersect.Network.csproj
+++ b/Intersect.Network/Intersect.Network.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Configurations>Debug;Release;Testing</Configurations>
+    <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
@@ -33,8 +33,8 @@
   <ItemGroup>
     <PackageReference Include="AscensionGameDev.Intersect.Building" Version="0.8.0.13-beta" GeneratePathProperty="True" />
     <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="2.0.0.30-beta" />
-<!--    <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.9.0.1-beta" />-->
-<!--    <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.7.7518.2930-debug" />-->
+    <!-- <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.9.0.1-beta" />-->
+    <!-- <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.7.7518.2930-debug" />-->
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
 
@@ -48,7 +48,9 @@
   <UsingTask TaskName="Intersect.Building.KeyGenerationTask" TaskFactory="TaskHostFactory" AssemblyFile="$(PkgAscensionGameDev_Intersect_Building)\lib\netstandard2.0\Intersect.Building.dll" />
 
   <Target Name="RunKeyGenerationTask" AfterTargets="ResolveReferences">
-    <KeyGenerationTask OutputDirectory="$(IntersectNetworkKeysOutputDirectory)" GenerateEachBuild="$(IntersectNetworkKeysGenerateEachBuild)" KeySize="$(IntersectNetworkKeySize)" />
+    <KeyGenerationTask OutputDirectory="$(IntersectNetworkKeysOutputDirectory)"
+      GenerateEachBuild="$(IntersectNetworkKeysGenerateEachBuild)"
+      KeySize="$(IntersectNetworkKeySize)" />
   </Target>
 
 </Project>
