--- a/Intersect.Server/Intersect.Server.csproj
+++ b/Intersect.Server/Intersect.Server.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <Configurations>Debug;Release;NoFody;Testing</Configurations>
+    <Configurations>Debug;Release</Configurations>
     <Platforms>AnyCPU</Platforms>
   </PropertyGroup>
 
@@ -16,10 +16,6 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <FileAlignment>512</FileAlignment>
     <GenerateRuntimeConfigurationFiles>True</GenerateRuntimeConfigurationFiles>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration.ToLower())' == 'nofody'">
-    <DisableFody>true</DisableFody>
   </PropertyGroup>
 
   <ItemGroup>
@@ -63,9 +59,6 @@
     <EmbeddedResource Include="Resources\notifications\PasswordReset.html" />
     <EmbeddedResource Include="Resources\e_sqlite3x64.dll" />
     <EmbeddedResource Include="Resources\e_sqlite3x86.dll" />
-    <None Include="FodyWeavers.xml">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
@@ -109,7 +102,6 @@
     <PackageReference Include="SmartThreadPool.dll" Version="2.3.0" />
     <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.4" />
     <PackageReference Include="System.Runtime.Caching" Version="7.0.0" />
-    <!-- <PackageReference Include="Swashbuckle.Core" Version="5.6.0" /> -->
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 </Project>
