--- a/Intersect.Network/Intersect.Network.csproj
+++ b/Intersect.Network/Intersect.Network.csproj
@@ -23,29 +23,30 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Intersect (Core)\Intersect.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AscensionGameDev.Intersect.Building" Version="0.8.0.13-beta" GeneratePathProperty="True" />
+    <PackageReference Include="AscensionGameDev.Intersect.Building" Version="0.8.0.13-beta"
+      GeneratePathProperty="True" />
     <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="2.0.0.30-beta" />
     <!-- <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.9.0.1-beta" />-->
-    <!-- <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.7.7518.2930-debug" />-->
+    <!-- <PackageReference Include="AscensionGameDev.Lidgren.Network" Version="1.7.7518.2930-debug"
+    />-->
     <PackageReference Include="System.Collections.Concurrent" Version="4.3.0" />
   </ItemGroup>
 
   <PropertyGroup>
     <IntersectNetworkKeysGenerateEachBuild>$(INTERSECT_GENERATE_EACH_BUILD)</IntersectNetworkKeysGenerateEachBuild>
     <IntersectNetworkKeySize Condition="'$(IntersectNetworkKeySize)' != ''">4096</IntersectNetworkKeySize>
-    <IntersectNetworkKeysGenerateEachBuild Condition="'$(IntersectNetworkKeysGenerateEachBuild)' != ''">true</IntersectNetworkKeysGenerateEachBuild>
-    <IntersectNetworkKeysOutputDirectory Condition="'$(IntersectNetworkKeysOutputDirectory)' == ''">$(MSBuildProjectDirectory)\bin\$(Configuration)\keys</IntersectNetworkKeysOutputDirectory>
+    <IntersectNetworkKeysGenerateEachBuild
+      Condition="'$(IntersectNetworkKeysGenerateEachBuild)' != ''">true</IntersectNetworkKeysGenerateEachBuild>
+    <IntersectNetworkKeysOutputDirectory Condition="'$(IntersectNetworkKeysOutputDirectory)' == ''">
+      $(MSBuildProjectDirectory)\bin\$(Configuration)\keys</IntersectNetworkKeysOutputDirectory>
   </PropertyGroup>
 
-  <UsingTask TaskName="Intersect.Building.KeyGenerationTask" TaskFactory="TaskHostFactory" AssemblyFile="$(PkgAscensionGameDev_Intersect_Building)\lib\netstandard2.0\Intersect.Building.dll" />
+  <UsingTask TaskName="Intersect.Building.KeyGenerationTask" TaskFactory="TaskHostFactory"
+    AssemblyFile="$(PkgAscensionGameDev_Intersect_Building)\lib\netstandard2.0\Intersect.Building.dll" />
 
   <Target Name="RunKeyGenerationTask" AfterTargets="ResolveReferences">
     <KeyGenerationTask OutputDirectory="$(IntersectNetworkKeysOutputDirectory)"
