--- a/Intersect (Core)/Intersect.Core.csproj
+++ b/Intersect (Core)/Intersect.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Configurations>Debug;Release;Testing</Configurations>
     <Platforms>AnyCPU</Platforms>
     <LangVersion>latest</LangVersion>
@@ -58,8 +58,8 @@
 
   <ItemGroup>
     <PackageReference Include="AscensionGameDev.Intersect.Rsa" Version="0.8.0.9-beta" />
-    <PackageReference Include="Ceras" Version="4.0.40" />
-    <PackageReference Include="CommandLineParser" Version="2.7.82" />
+    <PackageReference Include="Ceras" Version="4.1.7" />
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="K4os.Compression.LZ4" Version="1.1.10" />
     <PackageReference Include="MathNet.Numerics" Version="4.9.0" />
     <PackageReference Include="MessagePack" Version="2.4.59" />
@@ -72,8 +72,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis.VersionCheckAnalyzer" Version="3.0.0" />
     <PackageReference Include="Microsoft.CodeQuality.Analyzers" Version="3.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="2.1.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="2.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="7.0.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
@@ -91,7 +91,7 @@
     <PackageReference Include="Microsoft.NetCore.Analyzers" Version="3.0.0" />
     <PackageReference Include="Microsoft.NetFramework.Analyzers" Version="3.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Validation" Version="15.5.31" />
-    <PackageReference Include="ncalc" Version="1.3.8" />
+    <PackageReference Include="NCalcSync" Version="3.6.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Semver" Version="2.0.6" />
     <PackageReference Include="Serilog" Version="2.12.0" />
@@ -120,6 +120,8 @@
     <PackageReference Include="System.Runtime" Version="4.3.1" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
     <PackageReference Include="System.Runtime.Extensions" Version="4.3.1" />
+    <PackageReference Include="System.Text.Encodings.Web" Version="7.0.0" />
+    <PackageReference Include="System.Text.Json" Version="7.0.2" />
     <PackageReference Include="System.Threading" Version="4.3.0" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
