--- a/package.json
+++ b/package.json
@@ -1,43 +1,45 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
-  "private": true,
-  "description": "TypeScript template action",
-  "main": "lib/main.js",
-  "scripts": {
-    "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
-  },
-  "keywords": [
-    "actions",
-    "node",
-    "setup"
-  ],
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "@actions/core": "^1.10.0"
-  },
-  "devDependencies": {
-    "@types/node": "^18.11.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.3.2",
-    "jest": "^27.2.5",
-    "js-yaml": "^4.1.0",
-    "prettier": "2.5.1",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.4.4"
-  }
+	"name": "@intersect-engine/action-release-bundler",
+	"version": "0.7.2-beta",
+	"private": true,
+	"description": "Action to bundle releases for the Intersect game engine",
+	"main": "lib/main.js",
+	"scripts": {
+		"build": "tsc",
+		"format": "prettier --write '**/*.ts'",
+		"format-check": "prettier --check '**/*.ts'",
+		"lint": "eslint src/**/*.ts",
+		"package": "ncc build --source-map --license licenses.txt",
+		"test": "jest",
+		"all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/AscensionGameDev/actions-release-bundler.git"
+	},
+	"keywords": [
+		"intersect"
+	],
+	"author": "Ascension Game Dev",
+	"license": "MIT",
+	"dependencies": {
+		"@actions/core": "^1.10.0",
+		"@types/archiver": "^5.3.2",
+		"archiver": "^5.3.1",
+		"glob": "^9.3.1",
+		"mkdirp": "^2.1.5"
+	},
+	"devDependencies": {
+		"@types/node": "^18.15.5",
+		"@typescript-eslint/parser": "^5.56.0",
+		"@vercel/ncc": "^0.36.1",
+		"eslint": "^8.36.0",
+		"eslint-plugin-github": "^4.6.1",
+		"eslint-plugin-jest": "^27.2.1",
+		"jest": "^29.5.0",
+		"js-yaml": "^4.1.0",
+		"prettier": "2.8.6",
+		"ts-jest": "^29.0.5",
+		"typescript": "^5.0.2"
+	}
 }
