basic client editor running

--- a/Intersect.Client.Editor/Intersect.Client.Editor.csproj
+++ b/Intersect.Client.Editor/Intersect.Client.Editor.csproj
@@ -1,12 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <PublishAot>true</PublishAot>
-        <InvariantGlobalization>true</InvariantGlobalization>
+      <OutputType>WinExe</OutputType>
+<!--      <PublishAot>true</PublishAot>-->
     </PropertyGroup>
+
+  <PropertyGroup>
+    <PackageId>AscensionGameDev.Intersect.Client.Editor</PackageId>
+    <Description>Editor Client - Part of the Intersect 2D Game Creation Suite</Description>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <RootNamespace>Intersect.Client.Editor</RootNamespace>
+    <AssemblyName>Intersect Editor Client</AssemblyName>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <FileAlignment>512</FileAlignment>
+  </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Intersect.Client.Core\Intersect.Client.Core.csproj" />
+    </ItemGroup>
+
+  <ItemGroup Label="Project Embedded Resources">
+    <EmbeddedResource Include="$(IntersectRepoPath)\assets\intersect-logo-qu.bmp">
+      <LogicalName>Icon.bmp</LogicalName>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 
 </Project>
