--- a/Intersect.Client.Core/Intersect.Client.Core.csproj
+++ b/Intersect.Client.Core/Intersect.Client.Core.csproj
@@ -15,7 +15,7 @@
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Label="InternalsVisibleTo">
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
       <_Parameter1>Intersect.Tests.Client</_Parameter1>
     </AssemblyAttribute>
